# Scientific_Computing

./: .gitignore  README.md  pyproject.toml
set_1/: wave.py
set_1/scripts/: benchmarks.py  run_tide.py  run_wave.py  run_wave1D.py  run_wave2D.py
set_1/tests/: test_misc.py  test_tide.py  test_wave.py
set_1/utils/: TIDE.py  config.py  misc.py  optimized.py  wave.py
set_2/scripts/: main.py  run_dla.py  run_mc.py  run_rd.py
set_2/tests/: test_dla.py  test_mc.py  test_rd.py
set_2/utils/: DLA.py  MC_DLA.py  RD.py
set_3/scripts/: benchmark_fd.py  run_FE.py  run_LB.py  run_LBA.py  run_fd.py
set_3/tests/: test_LBA.py  test_fd.py
set_3/utils/: FD.py  FE.py  LB.py  LBA.py  WIFI.py  config.py
