[project]
name = "scientific-computing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "git-fame>=3.1.1",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "pytest>=9.0.2",
    "scipy>=1.17.0",
    "tqdm>=4.67.2",
]

[dependency-groups]
dev = [
    "git-fame>=3.1.1",
    "pytest>=9.0.2",
]
